# rcm

./: CMakeLists.txt
include/: csr_matrix.h
include/rcm/: cs_graph.h  csr_matrix.h  mesh.h  queue.h
src/: CMakeLists.txt  cs_graph.c  csr_matrix.c  mesh.c  queue.c
test/: CMakeLists.txt  cs_graph.c  csr_matrix.c  csr_matrix_io.c  csr_matrix_permute.c  mesh.c  queue.c
